--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.23.12",
+    "firebase": "^12.3.0",
+    "framer-motion": "^12.23.15",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
